package com.panda.study.designmodel.responsibilitychain;

/**
 * Created by Administrator on 2019/8/7.
 */
public class PurchaseRequest {
    private int type = 0;//请求类型
    private float price = 0.0f;//请求的金额
    private int id = 0;
    //构造器
    public PurchaseRequest(int type, float price, int id) {
        this.type = type;
        this.price = price;
        this.id = id;
    }

    public int getType() {
        return type;
    }

    public float getPrice() {
        return price;
    }

    public int getId() {
        return id;
    }
}
